feat: Implement driver and rider home screen UI with ride lifecycle management, map integration, and shared ride features.

--- a/Driver/src/app/home/home.page.html
+++ b/Driver/src/app/home/home.page.html
@@ -48,7 +48,7 @@
     <ion-row>
       <!-- Bottom Sheet Modal for Driver -->
       <ion-modal [isOpen]="bookingStage || confirmStage || trackingStage || drivingToDestinationStage"
-        [initialBreakpoint]="0.25" [breakpoints]="[0.25, 0.5, 0.75, 1]" [backdropDismiss]="false" [canDismiss]="false"
+        [initialBreakpoint]="0.25" [breakpoints]="[0, 0.25, 0.5, 0.75, 1]" [backdropDismiss]="false"
         [backdropBreakpoint]="0.5" handle="true" class="bottom-sheet-modal">
         <ng-template>
           <ion-content class="ion-padding bottom-sheet-content">
