--- a/Rider/src/app/home/home.page.html
+++ b/Rider/src/app/home/home.page.html
@@ -99,7 +99,7 @@
       <!-- Bottom Sheet Modal -->
       <ion-modal
         [isOpen]="bookingStage || confirmStage || searchingStage || trackingStage || drivingToDestinationStage || noDriverStage || mapPinStage"
-        [initialBreakpoint]="0.25" [breakpoints]="[0.25, 0.5, 0.75, 1]" [backdropDismiss]="false" [canDismiss]="false"
+        [initialBreakpoint]="0.25" [breakpoints]="[0, 0.25, 0.5, 0.75, 1]" [backdropDismiss]="false"
         [backdropBreakpoint]="0.5" handle="true" class="bottom-sheet-modal">
         <ng-template>
           <ion-content class="ion-padding bottom-sheet-content">
